# template-cpp-glfw

./: CMakeLists.txt  init.bat  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
